# local_volume_database

./: .gitignore  MANIFEST.in  README.md  create_database.sh  pyproject.toml  requirements.txt  setup.py
code/: check_bib_file.py  combine_table.py  combine_table_general.py  create_latex_table.py  create_yaml.py  example_plots.ipynb  example_yaml.yaml  lvdb_functions.py  std.mplstyle
data/: dwarf_all.csv  dwarf_all.fits  dwarf_local_field.csv  dwarf_local_field.fits  dwarf_local_field_distant.csv  dwarf_m31.csv  dwarf_m31.fits  dwarf_mw.csv  dwarf_mw.fits  gc_ambiguous.csv  gc_disk.csv  gc_disk.fits  gc_dwarf_hosted.csv  gc_dwarf_hosted.fits  gc_harris.csv  gc_harris.fits  gc_mw_new.csv  gc_other.csv  gc_ufsc.csv  gc_ufsc.fits  j_factor.csv  lvdb.bib  name_discovery.csv  notes.csv  pm_overview.csv  readme  readme.md
data_input/: 2ms_gc01.yaml  2ms_gc02.yaml  AGC749235.yaml  DDO_006.yaml  DDO_044.yaml  Donatiello_III.yaml  Donatiello_IV.yaml  ESO_393-12.yaml  ESO_456-09.yaml  ESO_540-032.yaml  IKN.yaml  IKN_GC1.yaml  IKN_GC2.yaml  IKN_GC3.yaml  IKN_GC4.yaml  IKN_GC5.yaml  KDG_2.yaml  KK_197.yaml  KK_197_gc1.yaml  KK_197_gc2.yaml  KK_197_gc3.yaml  KKs_55-GC2.yaml  KKs_55_GC1.yaml  LMC.yaml  LV_J0055-2310.yaml  MW.yaml  M_31.yaml  M_33.yaml  NGC_0247.yaml  NGC_0253.yaml  NGC_247-SC1.yaml  NGC_253-SNFC-dw1.yaml  NGC_4214.yaml  NGC_55-dw1.yaml  SMC.yaml  Scl-MM-dw1.yaml  Scl-MM-dw2.yaml  Scl-MM-dw3.yaml  Scl-MM-dw4.yaml  Scl-MM-dw5.yaml  (+1879 more)
data_output/: dsph_mw.csv  dwarf_local_field.fits  dwarf_m31.csv  dwarf_mw.csv  gc_disk.fits  gc_harris.fits  gc_ufsc.fits
(+61 files in other folders)
