[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local_volume_database"
authors = [{name = "Andrew Pace", email = "pvpace1@gmail.com"}]
readme = "README.md"
version="0.0.5"
requires-python = ">=3.8"
dependencies = ["numpy","astropy","matplotlib","pyyaml", "corner"
]
description = "local volume database package: Catalog of local volume dwarf galaxies and star clusters"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0-1.0 license",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/apace7/local_volume_database"
Issues = "https://github.com/apace7/local_volume_database/issues"

